--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <h1>my.always.x1</h1>
       
-    <li><a href="cars/alfa.html">Case Mate Slim Phone Cases</a></li>
-    <li><a href="cars/infiniti.html">Unisex Heavy Cotton Tee</a></li>
+    <li><a href="1256922591/product.html">Case Mate Slim Phone Cases</a></li>
+    <li><a href="1256874725/product.html">Unisex Heavy Cotton Tee</a></li>
 
 
 
