--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -1,6 +1,18 @@
 <html>
   <head>
     
+    <meta property="og:title" content="Unisex Heavy Cotton Tee">
+    <meta property="og:description" content="Unisex Heavy Cotton Tee">
+    <meta property="og:url" content="https://leordong.github.io/leo_rdong_web/1256874725/product.html">
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0286/0279/4056/products/aeeb41321b1787c2897d8e197b986042_470x.jpg?v=1590269592">
+    <meta property="product:brand" content="alwaysx1">
+    <meta property="product:availability" content="in stock">
+    <meta property="product:condition" content="new">
+    <meta property="product:price:amount" content="11.00">
+    <meta property="product:price:currency" content="USD">
+    <meta property="product:retailer_item_id" content="1256874725">
+    <meta property="product:item_group_id" content="alwaysx1_tshirts">
+    
     <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
