--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -39,6 +39,25 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
 /></noscript>
+    
+    fbq('track', 'Purchase',
+  // begin parameter object data
+  {
+    value: 115.00,
+    currency: 'USD',
+    contents: [
+      {
+        id: '1256922591',
+        quantity: 1
+      },
+      {
+        id: '1256874725',
+        quantity: 1
+      }],
+    content_type: 'product'
+  }
+  // end parameter object data
+);
   </head>
 
 
