--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -39,7 +39,7 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
 /></noscript>
-    
+    <script>
     fbq('track', 'Purchase',
   // begin parameter object data
   {
@@ -58,6 +58,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
   }
   // end parameter object data
 );
+  </noscript>
   </head>
 
 
