--- a/1256922591/product.html
+++ b/1256922591/product.html
@@ -28,6 +28,24 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
 /></noscript>
+    
+    <script>
+    fbq('track', 'ViewContent',
+  // begin parameter object data
+  {
+    value: 24.63,
+    currency: 'USD',
+    contents: [
+      {
+        id: '1256922591',
+        quantity: 1
+      },
+      ],
+    content_type: 'product'
+  }
+  // end parameter object data
+);
+  </script>
 <!-- End Facebook Pixel Code -->
       <title>Product 1</title>
   </head>
