--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -29,6 +29,24 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
 /></noscript>
+    
+    <script>
+    fbq('track', 'ViewContent',
+  // begin parameter object data
+  {
+    value: 11.00,
+    currency: 'USD',
+    contents: [
+      {
+        id: '1256874725',
+        quantity: 1
+      },
+      ],
+    content_type: 'product'
+  }
+  // end parameter object data
+);
+  </script>
 <!-- End Facebook Pixel Code -->
     <title>Product 2</title>
     <!-- Google Tag Manager -->
