--- a/eko/eko.html
+++ b/eko/eko.html
@@ -13,6 +13,12 @@
 </script>
   </head>
   <body>
+    <script>
+    ttq.identify('123', {
+    email: 'foo@bar.com', // we will hash with sha-256
+    phone_number: '+12133734253', // we will hash with sha-256
+    })
+    </script>
     <h1>Page for Eko</h1>
     <iframe 
       src="https://eko.com/tmw/101/embed" 
