--- a/eko/eko.html
+++ b/eko/eko.html
@@ -18,6 +18,8 @@
     email: 'foo@bar.com', // we will hash with sha-256
     phone_number: '+12133734253', // we will hash with sha-256
     })
+      
+     ttq.track('AddToCart');
     </script>
     <h1>Page for Eko</h1>
     <iframe 
