--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     
     <h1>my.always.x1</h1>
+	  <script>
+	  ttq.track('PlaceAnOrder')
+	  </script>
+
       
     <li><a href="1256922591/product.html">Case Mate Slim Phone Cases</a></li>
     <li><a href="1256874725/product.html">Unisex Heavy Cotton Tee</a></li>
