--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1>my.always.x1</h1>
 	  <script>
 	  ttq.track('PlaceAnOrder')
+	  ttq.track('AddToCart')
 	  </script>
 
       
