--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -82,6 +82,26 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
       alert( 'Clicked it!' )
     }
      </script>
+	  
+      </script>
+	  
+	  ttq.track('AddToCart', {
+   contents: [
+    {
+      content_id: '301',
+      content_type: 'product',
+      content_name: 'dress',
+      quantity: 1,
+      price: 8,
+    },
+    {
+      content_id: '401',
+      content_type: 'product',
+      content_name: 'dress-dress',
+      quantity: 1,
+      price: 1.2,
+    }]
+});   </script>
       
     
    <h1>Unisex Heavy Cotton Tee</h1>
