--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -83,7 +83,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
     }
      </script>
 	  
-      </script>
+      <script>
 	  
 	  ttq.track('AddToCart', {
    contents: [
