--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -97,7 +97,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
     {
       content_id: '401',
       content_type: 'product',
-      content_name:'Profile_2.2-Cu_ft_1200-Watt_countertop_microwave_stainless_steel',
+      content_name:'Profile_22_Cu_ft_1200-Watt_countertop_microwave_stainless_steel',
       Content_category:'Appliancesmicrowavescountertop_microwaves',
     }]
 });   </script>
