--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
       content_id: '401',
       content_type: 'product',
       content_name:'5-Ft_harvest_free_standing_decoration_grapevine_topiary',
-      content_category:'Appliances:microwaves:countertop_microwaves',
+      content_category:'Holiday_decorations:fall_decorations:fall_decor',
     }]
 });   </script>
       
