--- a/1256922591/product.html
+++ b/1256922591/product.html
@@ -37,7 +37,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
 /></noscript>
     
     <script>
-    fbq('track', 'ViewContent',
+    fbq('track', 'AddToCart',
   // begin parameter object data
   {
     value: 34.99,
