--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
     <h1>my.always.x1</h1>
-    <script>ttq.instance("C6PMPU0SD31JS4JVKIGG").track("ViewContent")</script>
+    <script>ttq.instance("C6PMPU0SD31JS4JVKIGG").track("ViewContent")
+	  ttq.instance("C6PMPU0SD31JS4JVKIGG").track('Download')
+	  </script>
 	  
       
     <li><a href="1256922591/product.html">Case Mate Slim Phone Cases</a></li>
