--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -9,6 +9,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WBGG2KL');</script>
 <!-- End Google Tag Manager -->
     
+    <meta property="og:title" content="Case Mate Slim Phone Cases">
+    <meta property="og:description" content="Case Mate Slim Phone Cases">
+    <meta property="og:url" content="https://leordong.github.io/leo_rdong_web/1256922591/product.html">
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0286/0279/4056/products/05eb7b54db63176f13b8700147c8d995_2048x2048.jpg?v=1590270953">
+    <meta property="product:brand" content="alwaysx1">
+    <meta property="product:availability" content="in stock">
+    <meta property="product:condition" content="new">
+    <meta property="product:price:amount" content="24.63">
+    <meta property="product:price:currency" content="USD">
+    <meta property="product:retailer_item_id" content="1256874725">
+    <meta property="product:item_group_id" content="alwaysx1_case">
+    
     <title>Product 2</title>
   
   </head>
