--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -52,6 +52,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
      </script>
     
+        <script>
+    fbq('track', 'AddToCart',
+  // begin parameter object data
+  {
+    value: 34.99,
+    currency: 'USD',
+    contents: [
+      {
+        id: '1256922591',
+        quantity: 1
+      },
+      ],
+    content_type: 'product'
+  }
+  // end parameter object data
+);
+  </script>
+    
    <h1>Unisex Heavy Cotton Tee</h1>
     <img src="https://cdn.shopify.com/s/files/1/0286/0279/4056/products/aeeb41321b1787c2897d8e197b986042_470x.jpg?v=1590269592" alt="white">
     <h2>price: $11.00 </h2>
