--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -102,6 +102,7 @@ ttq.track('AddToCart', {
 
     
   ttq.identify({
+    anonymous_id: "aaa",
     external_id: '123',
     sha256_email: 'ed941bd48cffe1696beb7186cbbc826f51e4f1cccc4d4b135e5802782a8a48c7', // Use lowercase prior to hashing
     sha256_phone_number: 'b0c56095f3ee41a3c3c3f020d4ba0bbcebf9b3fe85c4a6b7e2938f6e8588c51a',
