--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -93,9 +93,8 @@ ttq.track('AddToCart', {
     price: 8,
     value: 9.2,
     currency: 'USD',
-},
-{event_id:'1239485'});
-    
+    event_id:'1239485',
+},    
 
 </script>
     
