--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -84,17 +84,8 @@ ttq.identify({
     phone_number: '+16122229420',
 })
 
-
-ttq.track('AddToCart', {
-    content_id: '301',
-    content_type: 'product',
-    content_name: 'dress',
-    quantity: 1,
-    price: 8,
-    value: 9.2,
-    currency: 'USD',
-    event_id:'1239485',
-});
+ttq.track('AddToCart', 
+{event_id:'1239485'});
 
 </script>
     
