--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -85,7 +85,7 @@ ttq.identify({
 })
 
 ttq.track('AddToCart', {
-   mmp_contents: [
+   contents: [
     {
       content_id: '301',
       content_type: 'product',
