--- a/1256922591/product.html
+++ b/1256922591/product.html
@@ -81,6 +81,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     function myFunction() {
       alert( 'Clicked it!' )
     }
+    </script> 
+    
+    <script>
+      ttq.track('AddPaymentInfo')
     </script>
+    
+  
   </body>
 </html>
