--- a/1256874725/product.html
+++ b/1256874725/product.html
@@ -80,8 +80,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 ttq.identify({
     external_id: '123',
-    email: 'dongx205@umn.edu',
-    phone_number: '+16122229420',
+    email: 'ed941bd48cffe1696beb7186cbbc826f51e4f1cccc4d4b135e5802782a8a48c7',
+    phone_number: 'ed941bd48cffe1696beb7186cbbc826f51e4f1cccc4d4b135e5802782a8a48c7',
 })
 
 ttq.track('AddToCart', {
